--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -2,6 +2,6 @@ username=bikramadityadas1@gmail.com
 password=dipudon1234  
 url=https://www.naukri.com/
 browser=edge
-headless=false
+headless=true
 # browser=chrome
 # browser=firefox
