--- a/pom.xml
+++ b/pom.xml
@@ -29,10 +29,11 @@
 			<artifactId>cucumber-java</artifactId>
 			<version>7.13.0</version>
 		</dependency>
+
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>2.11.0</version> <!-- Use the latest version -->
+			<version>2.18.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
